Fixed alignment bug on the artist detail page

--- a/app/styles/_detail.scss
+++ b/app/styles/_detail.scss
@@ -138,3 +138,13 @@
     }
   }
 }
+
+@media only screen and (max-width: 30em) {
+  .detail-album-title {
+    text-align: center;
+  }
+
+  .albums {
+    justify-content: center;
+  }
+}
